<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserWelcomeActivity">

    <TextView
        android:id="@+id/txtWelcomeTitle"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/welcomeTitle_textView"
        android:textAlignment="center"
        android:textColor="@color/soleus_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imgWelcomeCorner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgWelcomeCorner"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:contentDescription="@string/miniLogo_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtWelcomeTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/soleusregular" />

    <Button
        android:id="@+id/btnWelcomeHkRequest"
        android:layout_width="190dp"
        android:layout_height="82dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="111dp"
        android:text="@string/welcomeHousekeeping_button"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcomeSubtitle" />

    <Button
        android:id="@+id/btnWelcomeMtRequest"
        android:layout_width="190dp"
        android:layout_height="82dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="111dp"
        android:text="@string/welcomeMaintenance_button"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWelcomeHkRequest" />

    <TextView
        android:id="@+id/txtWelcomeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="151dp"
        android:text="@string/welcomeSubtitle_textView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcomeTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>