<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_regular"
    tools:context=".activities.RoomRequestManagerActivity">

    <TextView
        android:id="@+id/txtRoomRequestListFilterTitle"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/RoomRequestListTitle_textView"
        android:textAlignment="center"
        android:textColor="@color/soleus_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imgRoomRequestListCorner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgRoomRequestListCorner"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:contentDescription="@string/miniLogo_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtRoomRequestListFilterTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/soleusregular" />

    <LinearLayout
        android:id="@+id/linearRoomRequestList"
        android:layout_width="355dp"
        android:layout_height="354dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/linearbg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRoomRequestListFilterTitle">

        <ImageButton
            android:id="@+id/btnGetRoomRequestList"
            android:layout_width="156dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@color/soleus_dark"
            android:contentDescription="@string/getRoomRequestList_button"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/roomrequestlistbutton"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btnRoomRequestFilter"
            android:layout_width="156dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@color/soleus_dark"
            android:contentDescription="@string/filterRoomRequest_button"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/filterbutton"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearFilter"
        android:layout_width="355dp"
        android:layout_height="151dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/linearbgbottomradius"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearRoomRequestList"
        android:visibility="invisible">


        <Spinner
            android:id="@+id/spinnerFilter"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnRoomRequestFilterList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/filterRoomRequest_button"
            android:text="@string/filterRoomRequest_button"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>